appId: uk.co.mealzen.app
name: Book Flow
---
- launchApp

# Go to books tab
- tapOn: "Settings, tab, 3 of 3"
- tapOn: "Books"

# Create a book
- tapOn: "Book name"
- inputText: "Test Book"
- tapOn: "Create Book"

# Assert book is created
- assertVisible: "Book name"
- assertVisible: "Test Book"

# Open modal to edit book
- tapOn: "Test Book"
- assertVisible: "Book Details"

# Edit the book
- tapOn: "Name input"
- inputText: " Edited"
- tapOn: "Author input"
- inputText: "Test Author"
- tapOn: "Save"

# Assert book is edited
- assertNotVisible: "Book Details"
- assertVisible: "Test Book Edited"
- assertVisible: "Test Author"

# Delete the book
- tapOn: "Delete Test Book Edited Button"
- assertNotVisible: "Test Book Edited"
