appId: uk.co.mealzen.app
name: Meal Flow
---
- launchApp

# Go to meals tab
- tapOn: "Meals, tab, 2 of 4"

# Create a meal
- tapOn: "Meal name"
- inputText: "Test Meal"
- tapOn: "Create Meal"

# Assert meal is created
- assertVisible: "Meal name"
- assertVisible: "Test Meal"

# Open modal to edit meal
- tapOn: "Test Meal"
- assertVisible: "Edit Meal"

# Edit the meal
- tapOn: "Name input"
- inputText: " Edited"
- tapOn: "Recipe URL input"
- inputText: "https://www.mealzen.co.uk"
- tapOn: "Save"

# Assert meal is edited
- assertNotVisible: "Edit Meal"
- assertVisible: "Test Meal Edited"
- assertVisible: "Link to recipe"

# Delete the meal
- tapOn: "Delete Test Meal Edited Button"
- assertNotVisible: "Test Meal Edited"
